--- a/WMRApp/MainWindow.xaml
+++ b/WMRApp/MainWindow.xaml
@@ -6,119 +6,124 @@
         xmlns:m="clr-namespace:Microsoft.Maps.MapControl.WPF;assembly=Microsoft.Maps.MapControl.WPF"
         xmlns:local="clr-namespace:WMRApp"
         mc:Ignorable="d"
-        Title="RouteCustom" Height="700" Width="1200" WindowStartupLocation="CenterScreen" Activated="Window_Activated" Background="#eed" ResizeMode="CanResize">
-  <Grid Margin="5">
-    <Grid.ColumnDefinitions>
-      <ColumnDefinition Width="3*"/>
-      <ColumnDefinition Width="5*"/>
-      <ColumnDefinition Width="3*"/>
-    </Grid.ColumnDefinitions>
-    <Grid Grid.Column="1" HorizontalAlignment="Left" Height="630" Margin="10,13,0,0" VerticalAlignment="Top" Width="522">
-      <Grid.RowDefinitions>
-        <RowDefinition Height="8*"/>
-        <RowDefinition Height="1*"/>
-      </Grid.RowDefinitions>
-      <Border BorderBrush="#299" BorderThickness="5">
-        <m:Map Grid.Row="0" Name="MyMap" 
+        Title="RouteCustom" Height="700" Width="1400" WindowStartupLocation="CenterScreen" Activated="Window_Activated" Background="#eed" ResizeMode="CanResize">
+
+    <Grid Margin="5,20,5,5">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="5*"/>
+            <ColumnDefinition Width="3*"/>
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Column="1" HorizontalAlignment="Left" Height="630" Margin="10,13,0,0" VerticalAlignment="Top" Width="522">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="8*"/>
+                <RowDefinition Height="1*"/>
+            </Grid.RowDefinitions>
+            <Border BorderBrush="#299" BorderThickness="5">
+                <m:Map Grid.Row="0" Name="MyMap" 
                CredentialsProvider="AhOYVsCHeLfCM2LttVNiVAK6mUGtJmjRlevk_2qjuzV9J-gNrsj6z6MD5XREJN1h" 
                ZoomLevel="11" Center="45.501689,-73.567256" 
                MouseDoubleClick="MyMap_MouseDoubleClick"
                >
-        </m:Map>
-      </Border>
+                </m:Map>
+            </Border>
 
-      <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="10 0">
-        <TextBox Name="tbLocation" IsReadOnly="True" Width="400" Padding="15" VerticalAlignment="Center" TextWrapping="Wrap" ScrollViewer.VerticalScrollBarVisibility="Auto" />
-        <Button Name="btnAddStop" Content="Add" Width="70" Margin="10 0" Padding="10" VerticalAlignment="Center" Click="btnAddStop_Click" />
-      </StackPanel>
-    </Grid>
-    <Grid HorizontalAlignment="Left" Height="630" Margin="10 10 0 0" VerticalAlignment="Top" Width="290">
-      <Grid.RowDefinitions>
-        <RowDefinition Height="*" />
-        <RowDefinition Height="6*"/>
-        <RowDefinition Height="2*"/>
-        <RowDefinition Height="7*"/>
-      </Grid.RowDefinitions>
-      <Label Grid.Row="0" Background="#ffc" Foreground="#484" FontSize="18" Padding="5" BorderThickness="2" BorderBrush="#299" Margin="0 0 0 2" Name="lblCurrentUser" />
-      <ListView Name="lvUsers" Grid.Row="1" BorderBrush="#299" BorderThickness="1">
-        <ListView.View>
-          <GridView>
-            <GridViewColumn Header="No." Width="40" DisplayMemberBinding="{Binding Id}"/>
-            <GridViewColumn Header="Name" Width="120" DisplayMemberBinding="{Binding Name}"/>
-            <GridViewColumn Header="User name" Width="120" DisplayMemberBinding="{Binding UserName}"/>
-          </GridView>
-        </ListView.View>
-      </ListView>
-      <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="0 10">
-        <TextBox Name="tbChat" Width="220" TextWrapping="Wrap"/>
-        <Button Name="btnChat" Click="btnChat_Click" IsDefault="True" Width="50" Margin="20 10" Content="Send"/>
-      </StackPanel>
-      <ListBox Name="lbChats" Grid.Row="3" BorderBrush="#299" BorderThickness="1" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
-        <ListBox.ItemTemplate>
-          <DataTemplate>
-            <Grid>
-              <TextBlock Text="{Binding}" TextWrapping="Wrap" />
-            </Grid>
-          </DataTemplate>
-        </ListBox.ItemTemplate>
-      </ListBox>
-    </Grid>
-    <Grid Grid.Column="2" HorizontalAlignment="Left" Height="630" Margin="20,10,10,0" VerticalAlignment="Top" Width="290">
-      <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="227*"/>
-      </Grid.ColumnDefinitions>
-      <Grid.RowDefinitions>
-        <RowDefinition Height="*"/>
-        <RowDefinition Height="*"/>
-      </Grid.RowDefinitions>
-      <Border BorderBrush="#299" BorderThickness="2" Background="#eff" Margin="0 3 0 0">
-        <Grid Grid.Row="0" >
-          <Grid.RowDefinitions>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="2*"/>
-            <RowDefinition Height="3*"/>
-            <RowDefinition Height="9*"/>
-          </Grid.RowDefinitions>
-          <Label Content="INDICATE YOUR TRIP:" Margin="5 0" VerticalAlignment="Center" FontWeight="SemiBold"/>
-          <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" >
-            <Label Content="From:" HorizontalAlignment="Left" Width="40" Margin="5 0" />
-            <TextBox Name="tbFrom" HorizontalAlignment="Right"  Width="220" Height="26" Padding="2" />
-          </StackPanel>
-          <StackPanel Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" >
-            <Label Content="To:" HorizontalAlignment="Left" Width="40" Margin="5 0" />
-            <TextBox Name="tbTo" HorizontalAlignment="Right"  Width="220" Height="26" Padding="2" />
-          </StackPanel>
-          <Button Grid.Row="3" Name="btnSearch" Click="btnSearch_Click" Content="Search driver(s)" Width="150" Height="28" FontSize="16" />
-          <ListView Name="lvFoundUsers" Grid.Row="4" BorderBrush="#299" BorderThickness="1" Margin="4">
-            <ListView.View>
-              <GridView>
-                <GridViewColumn Header="No." Width="40" DisplayMemberBinding="{Binding Id}"/>
-                <GridViewColumn Header="Name" Width="120" DisplayMemberBinding="{Binding Name}"/>
-                <GridViewColumn Header="User name" Width="120" DisplayMemberBinding="{Binding UserName}"/>
-              </GridView>
-            </ListView.View>
-          </ListView>
+            <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="10 0">
+                <TextBox Name="tbLocation" IsReadOnly="True" Width="400" Padding="15" VerticalAlignment="Center" TextWrapping="Wrap" ScrollViewer.VerticalScrollBarVisibility="Auto" />
+                <Button Name="btnAddStop" Content="Add" Width="70" Margin="10 0" Padding="10" VerticalAlignment="Center" Click="btnAddStop_Click" />
+            </StackPanel>
         </Grid>
-      </Border>
-      <Grid Grid.Row="1" Margin="0 5 0 0">
-        <Grid.RowDefinitions>
-          <RowDefinition Height="6*"/>
-          <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <ListBox Name="lbStops"  Grid.Row="0" Margin="0,10" BorderBrush="#299" BorderThickness="1" >
-          <ListBox.ItemTemplate>
-            <DataTemplate>
-              <Grid>
-                <TextBlock Text="{Binding}" />
-              </Grid>
-            </DataTemplate>
-          </ListBox.ItemTemplate>
-        </ListBox>
-        <Button Grid.Row="1" Content="Clear All" HorizontalAlignment="Center" Name="btnClear" Click="btnClear_Click" Width="75" />
-        <Button Grid.Row="1" Content="Exit" HorizontalAlignment="Right" Name="btnExit" Click="btnExit_Click" Width="75" />
-         <Button Grid.Row="1" Content="Delete" Click="btnDelete_Click" HorizontalAlignment="Left" Name="btnDelete" Width="75"/>
+        <Grid HorizontalAlignment="Left" Height="630" Margin="10 10 0 0" VerticalAlignment="Top" Width="290">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="6*"/>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="7*"/>
+            </Grid.RowDefinitions>
+            <Label Grid.Row="0" Background="#ffc" Foreground="#484" FontSize="18" Padding="5" BorderThickness="2" BorderBrush="#299" Margin="0 0 0 2" Name="lblCurrentUser" />
+            <ListView Name="lvUsers" Grid.Row="1" BorderBrush="#299" BorderThickness="1">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="No." Width="40" DisplayMemberBinding="{Binding Id}"/>
+                        <GridViewColumn Header="Name" Width="120" DisplayMemberBinding="{Binding Name}"/>
+                        <GridViewColumn Header="User name" Width="120" DisplayMemberBinding="{Binding UserName}"/>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+            <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="0 10">
+                <TextBox Name="tbChat" Width="220" TextWrapping="Wrap"/>
+                <Button Name="btnChat" Click="btnChat_Click" IsDefault="True" Width="50" Margin="20 10" Content="Send"/>
+            </StackPanel>
+            <ListBox Name="lbChats" Grid.Row="3" BorderBrush="#299" BorderThickness="1" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <TextBlock Text="{Binding}" TextWrapping="Wrap" />
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </Grid>
+        <Grid Grid.Column="2" HorizontalAlignment="Left" Height="630" Margin="20,10,10,0" VerticalAlignment="Top" Width="290">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="227*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Border BorderBrush="#299" BorderThickness="2" Background="#eff" Margin="0 3 0 0">
+                <Grid Grid.Row="0" >
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="2*"/>
+                        <RowDefinition Height="2*"/>
+                        <RowDefinition Height="2*"/>
+                        <RowDefinition Height="3*"/>
+                        <RowDefinition Height="9*"/>
+                    </Grid.RowDefinitions>
+                    <Label Content="INDICATE YOUR TRIP:" Margin="5 0" VerticalAlignment="Center" FontWeight="SemiBold"/>
+                    <StackPanel Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" >
+                        <Label Content="From:" HorizontalAlignment="Left" Width="40" Margin="5 0" />
+                        <TextBox Name="tbFrom" HorizontalAlignment="Right"  Width="220" Height="26" Padding="2" />
+                    </StackPanel>
+                    <StackPanel Grid.Row="2" Orientation="Horizontal" VerticalAlignment="Center" >
+                        <Label Content="To:" HorizontalAlignment="Left" Width="40" Margin="5 0" />
+                        <TextBox Name="tbTo" HorizontalAlignment="Right"  Width="220" Height="26" Padding="2" />
+                    </StackPanel>
+                    <Button Grid.Row="3" Name="btnSearch" Click="btnSearch_Click" Content="Search driver(s)" Width="150" Height="28" FontSize="16" />
+                    <ListView Name="lvFoundUsers" Grid.Row="4" BorderBrush="#299" BorderThickness="1" Margin="4">
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header="No." Width="40" DisplayMemberBinding="{Binding Id}"/>
+                                <GridViewColumn Header="Name" Width="120" DisplayMemberBinding="{Binding Name}"/>
+                                <GridViewColumn Header="User name" Width="120" DisplayMemberBinding="{Binding UserName}"/>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+                </Grid>
+            </Border>
+            <Grid Grid.Row="1" Margin="0 5 0 0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="6*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <ListBox Name="lbStops"  Grid.Row="0" Margin="0,10" BorderBrush="#299" BorderThickness="1" >
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <TextBlock Text="{Binding}" />
+                            </Grid>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+                <Button Grid.Row="1" Content="Clear All" HorizontalAlignment="Center" Name="btnClear" Click="btnClear_Click" Width="75" />
+                <Button Grid.Row="1" Content="Exit" HorizontalAlignment="Right" Name="btnExit" Click="btnExit_Click" Width="75" />
+                <Button Grid.Row="1" Content="Delete" Click="btnDelete_Click" HorizontalAlignment="Left" Name="btnDelete" Width="75"/>
             </Grid>
+        </Grid>
+        <Menu HorizontalAlignment="Left" Height="20" Margin="0,-20,0,0" VerticalAlignment="Top">
+            <MenuItem Header="File"/>
+            <MenuItem Header="Logout" Click="Logout_Click"/>
+        </Menu>
     </Grid>
-  </Grid>
 </Window>
